vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__operator_symbol.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"\\\"+\\\"\")"
---
Name
  NameDesignatorPrefix
    StringLiteral '"+"'
