vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__parse_selected_name_all.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"foo.all\")"
---
Name
  NameDesignatorPrefix
    Identifier 'foo'
  SelectedName
    Dot
    Keyword(All)
