vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__parse_selected_name_multiple.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"foo.bar.baz\")"
---
Name
  NameDesignatorPrefix
    Identifier 'foo'
  SelectedName
    Dot
    Identifier 'bar'
  SelectedName
    Dot
    Identifier 'baz'
