vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__simple_name.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"foo\")"
---
Name
  NameDesignatorPrefix
    Identifier 'foo'
