vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__slice_name_range-2.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"prefix(3 downto 0)\")"
---
Name
  NameDesignatorPrefix
    Identifier 'prefix'
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        ActualPart
          ActualPartExpression
            BinaryExpression
              LiteralExpression
                AbstractLiteral '3'
              Keyword(Downto)
              LiteralExpression
                AbstractLiteral '0'
    RightPar
