vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__slice_name_range.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"prefix(0 to 3)\")"
---
Name
  Identifier 'prefix'
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        ActualPart
          ActualPartExpression
            BinaryExpression
              LiteralExpression
                AbstractLiteral '0'
              Keyword(To)
              LiteralExpression
                AbstractLiteral '3'
    RightPar
