vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__slice_range_attribute.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"prefix(foo(0)'range)\")"
---
Name
  Identifier 'prefix'
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        ActualPart
          ActualPartExpression
            NameExpression
              Name
                Identifier 'foo'
                ParenthesizedName
                  LeftPar
                  AssociationList
                    AssociationElement
                      ActualPart
                        ActualPartExpression
                          LiteralExpression
                            AbstractLiteral '0'
                  RightPar
                AttributeName
                  Tick
                  Keyword(Range)
    RightPar
